	  to read the file name from pipe, does the stat(2) system call, and
	  writes the result back to a pipe.
	* Really add ASCII null at command string in add_proc() of pstree.c
	* fuser uses correct timeout_stat define Debian #661723
	* fuser is not compiled on hurd-i386 Debian #673485
	* No TEXTRELS in src/lists built as PIE on x86

Changes in 22.16
================
	* Use strncpy for COMM_LEN and make it 18 characters to cover brackets
	  in name.
	* don't change COMM_LEN, it breaks matching long commands
	  Debian #661145
	* Enable some harden AM_CFLAGS by default, use configure option
	  --disable-harden-flags to not use it.

Changes in 22.15
================
	* Really apply patch for SF#31110178 RH#651794, SF#3317431
	* Conditionally use fork before stat calls SF#3427522
	* Patch from Corrina Vinschen for compiling on cygwin
	* Use ENOENT not EBADE for FreeBSD Debian #631566
	* Fix prstat typos
	* Stop zombies by using waitpid Ubuntu #876387 by Peter Holik, SF#3429674
	* Fixed minor older/younger typo in killall.1 thanks to Maikel Linke
	* Remove doubled content in src/lists.h
	* Add another 2 for thread brackets in pstree.c
	* Correct defines for timeout in configure.ac

Changes in 22.14
================
	* Fix file descriptor as well as memory leaks in fuser
	* Strip @ symbol from file names read from /proc/net/unix
	* Above 2 changes close openSuSE bugs #536209, #529520, and #417841
	  and provided by Werner Fink
	* Applied patch from Werner Fink to avoid stat(2) on NFS mounts
	* Zeros process group memory - Patch by jgorig SF#3152925 RH#666213
	* fuser -m -s flags work - Patch by jgorig SF#31110178 RH#651794
	* fuser silent if /proc/swaps not available SF#3072134
	* ppc 64 support for peekfd by jgorig SF#3166444
	* jiffies now ULL in killall SF#3138538
	* pstree can show parents of a process. Patch supplied by Curtis
	  Hawthorne SF#3135157
	* killall creates right size buffer instead of MAX_PATH Debian #623425