@@ -11,6 +11,7 @@ Changes in 22.17 (unreleased)
 	* fuser uses correct timeout_stat define Debian #661723
 	* fuser is not compiled on hurd-i386 Debian #673485
 	* No TEXTRELS in src/lists built as PIE on x86
+	* Fake pstree root for kernels with hidepid turned on
 
 Changes in 22.16
 ================
